--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,13 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.example.a_star/com.example.a_star.AStarApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
+                            <launcher>AStar</launcher>
+                            <jlinkZipName>AStar</jlinkZipName>
+                            <jlinkImageName>AStar</jlinkImageName>
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <compress>2</compress>
                         </configuration>
                     </execution>
                 </executions>
